--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "recoil": "^0.7.7",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.0",
+    "timeago.js": "^4.0.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
