--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.0",
     "timeago.js": "^4.0.2",
