--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.29",
     "axios": "^1.6.0",
+    "install": "^0.13.0",
     "lodash": "^4.17.21",
+    "npm": "^10.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -26,6 +28,8 @@
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.9",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "socket.io-client": "^4.7.2",
@@ -59,6 +63,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.201"
+    "@types/lodash": "^4.14.201",
+    "@types/react-window": "^1.8.8"
   }
 }
