--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.29",
     "axios": "^1.6.0",
+    "framer-motion": "^10.16.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
