--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.29",
     "axios": "^1.6.0",
+    "framer-motion": "^10.16.5",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
-    "framer-motion": "^10.16.5",
     "npm": "^10.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +37,7 @@
     "styled-components": "^6.1.0",
     "timeago.js": "^4.0.2",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -65,6 +66,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.201",
-    "@types/react-window": "^1.8.8"
+    "@types/react-window": "^1.8.8",
+    "@types/uuid": "^9.0.7"
   }
 }
