refactor: image-webpack-loader 플러그인 추가

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/uuid": "^9.0.7",
     "@types/webpack": "^5.28.5",
     "brotli-webpack-plugin": "^1.1.0",
-    "compression-webpack-plugin": "^10.0.0"
+    "compression-webpack-plugin": "^10.0.0",
+    "image-webpack-loader": "^8.1.0"
   }
 }
